--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,11 @@
     RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
 
+# Custom Error Documents
+ErrorDocument 404 /404.php
+ErrorDocument 403 /404.php
+ErrorDocument 500 /404.php
+
 # Default index file
 DirectoryIndex index.php
 
@@ -24,7 +29,7 @@ Options -Indexes
 </FilesMatch>
 
 # Block sensitive files
-<FilesMatch "(^config\.php$|^database\.php$|^composer\.json$|^composer\.lock$|^\.env$)">
+<FilesMatch "(^config\.php$|^database\.php$|^composer\.json$|^composer\.lock$|^\.env$|^includes/config\.php$)">
     Order deny,allow
     Deny from all
 </FilesMatch>
@@ -34,6 +39,39 @@ Options -Indexes
     Header always set X-Content-Type-Options "nosniff"
     Header always set X-Frame-Options "SAMEORIGIN"
     Header always set X-XSS-Protection "1; mode=block"
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
+
+# Cache control for static assets
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/javascript "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType application/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresDefault "access plus 2 days"
+</IfModule>
+
+# Gzip compression
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/json
 </IfModule>
 
 # Optional: Allow access to test scripts like test_db_raw.php
@@ -41,3 +79,15 @@ Options -Indexes
     Order allow,deny
     Allow from all
 </Files>
+
+# Protect against common attacks
+<IfModule mod_rewrite.c>
+    # Block suspicious user agents and requests
+    RewriteCond %{HTTP_USER_AGENT} (libwww-perl|wget|python|nikto|curl|scan|java|winhttp|clshttp|loader) [NC,OR]
+    RewriteCond %{HTTP_USER_AGENT} (<|>|'|%0A|%0D|%27|%3C|%3E|%00) [NC,OR]
+    RewriteCond %{THE_REQUEST} (\?|\*|%2a)+(%20+|\\s+|%20+\\s+|\\s+%20+|\s+%20+\s+)HTTP(:/|/) [NC,OR]
+    RewriteCond %{THE_REQUEST} etc/passwd [NC,OR]
+    RewriteCond %{THE_REQUEST} cgi-bin [NC,OR]
+    RewriteCond %{THE_REQUEST} (%0A|%0D|\\r|\\n) [NC]
+    RewriteRule .* - [F]
+</IfModule>
